[tool.poetry]
name = "airport"
version = "0.1.0"
description = ""
authors = ["Xu zhengyu <zen-xu@outlook.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
