[tool.poetry]
name = "airport"
version = "0.1.0"
description = ""
authors = ["Xu zhengyu <zen-xu@outlook.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
returns = "^0.14.0"
kubernetes = "^11.0.0"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-sugar = "^0.9.4"
black = "^19.10b0"
isort = "^5.4.2"
flake8 = "^3.8.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
